--- a/DemoApp.csproj
+++ b/DemoApp.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="demoappMVC.Tests\**" />
+    <EmbeddedResource Remove="demoappMVC.Tests\**" />
+    <None Remove="demoappMVC.Tests\**" />
+  </ItemGroup>
+
 </Project>
